--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/jeguzzi_rosbag_utils
+script_dir=$base/lib/rosbag_utils
 [install]
-install_scripts=$base/lib/jeguzzi_rosbag_utils
+install_scripts=$base/lib/rosbag_utils
